# matrix-year

./: .env.template  .gitignore  CLI.md  Cargo.toml  PROMPTS.md  README.md  agents.md  stats_schema.json  stats_spec.md
.github/actions/setup-rust-env/: action.yml
.github/workflows/: ci.yml  integration-tests.yml
docs/: CLI.md  PROMPTS.md  stats_spec.md
examples/: example-stats-2025-03-15.json  example-stats-2025-03.json  example-stats-2025-W12.json  example-stats-life.json  example-stats.json  my-day-2025-03-15.md  my-life.md  my-month-2025-03.md  my-week-2025-W12.md  my-year-2025.md  test_logging.rs  test_sdk_logging.rs
examples/output/: my-day-2025-03-15.md  my-life.md  my-month-2025-03.md  my-week-2025-W12.md
examples/stats/: example-stats-2025-W12.json  example-stats-life.json
src/: account_selector.rs  crawl.rs  crawl_db.rs  lib.rs  logging.rs  login.rs  logout.rs  main.rs  reset.rs  sdk.rs  secrets.rs  stats.rs  stats_builder.rs  status.rs  timefmt.rs  window.rs
src/commands/: login.rs  logout.rs  mod.rs  status.rs
src/commands/crawl/: db.rs  decision.rs  discovery.rs  mod.rs  stats_builder.rs  types.rs
src/commands/render/: md.rs
src/crawl/: decision.rs  discovery.rs  mod.rs  pagination.rs  progress.rs  types.rs
src/renderer/: md.rs
tests/: integration_login.rs
