[package]
name = "my"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "my"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indexmap = { version = "2", features = ["serde"] }
