[package]
name = "my"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "my"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indexmap = { version = "2", features = ["serde"] }
jsonschema = "0.18"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
rpassword = "7"
matrix-sdk = { version = "0.16.0", features = ["e2e-encryption", "sqlite", "sso-login"] }
rand = "0.8"
inquire = "0.7"
whoami = "1"
